# minnet-rs

./: Cargo.toml
config/: config.example.toml
migrations/00001_create_users/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/controllers/: users.rs
src/misc/: mod.rs  random_id.rs  validators.rs
src/objects/: mod.rs  uri.rs
src/objects/activitypub/: json_ld.rs  mod.rs  object.rs  person.rs
src/objects/context/: config.rs  mod.rs
src/objects/models/: mod.rs  users.rs  users_auth.rs
src/objects/others/: mod.rs  nodeinfo.rs  well_known.rs
src/routes/: auth.rs  mod.rs  nodeinfo.rs  well_known.rs
src/routes/objects/: mod.rs  users.rs
tests/: misc.rs  users.rs  utils.rs
tests/routes/: mod.rs  objects.rs  well_known.rs
