[package]
authors = ["Raclett3 <im@s283.net>"]
edition = "2018"
name = "minnet-rs"
version = "0.1.0"

[dependencies]
actix-web = {version = "3"}
bcrypt = "0.8.2"
chrono = "0.4"
diesel = {version = "1.4", features = ["postgres"]}
openssl = "0.10.30"
rand = "0.7.3"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
